completed  MVP app, added counting moves and gamescompleted() to lib

--- a/bkeWebApp/Pages/Shared/_Layout.cshtml
+++ b/bkeWebApp/Pages/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Documentation">Documentation</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Play">Play</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Documentation">Documentation</a>
                     </li>
                 </ul>
             </div>
@@ -41,7 +41,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2023 - bkeWebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        &copy; 2023 - bkeWebApp - 
     </div>
 </footer>
 
