--- a/bkeWebApp/Pages/Documentation.cshtml
+++ b/bkeWebApp/Pages/Documentation.cshtml
@@ -5,24 +5,20 @@
     ViewData["Title"] = "Documentation";
 }
 
-<div class="text-center">
+<!-- <div class="text-center"> -->
     <h1  class="display-4" id="boter-kaas-en-eieren">Boter, Kaas en eieren</h1>
-</div>
 
 <div>
     <h1 id="spelbeschrijving">Spelbeschrijving</h1>
     <ol type="1">
         <li>Twee spelers.</li>
         <li>Bord van 3 X 3 velden.</li>
-        <li>speler kiest X of 0.<br />
-        </li>
+        <li>speler kiest X of 0.</li>
         <li>Omstebeurt zet speler 0 of X in een veld.</li>
         <li>Een zet kan niet gewijzigd worden.</li>
         <li>Op een gevuld veld kan niet gespeeld worden.</li>
-        <li>De eerste speler met 3 X of 3 0, horizontaal, verticaal of diagonaal
-            wint.</li>
-        <li>ALs geen van de spelers 3 op een rij krijgt, is het gelijk
-            spel.</li>
+        <li>De eerste speler met 3 X of 3 0, horizontaal, verticaal of diagonaal wint.</li>
+        <li>ALs geen van de spelers 3 op een rij krijgt, is het gelijk spel.</li>
     </ol>
 </div>
 <div>
@@ -45,22 +41,17 @@
         <li>spelers spelen omstebeurt, twee keer zelfde speler mag niet.</li>
         <li>een zet is definitief, tweemaal op zelfde veld spelen mag niet.</li>
         <li>een zet is definitief, een zet terugnemen mag niet.</li>
-        <li>Het spel eindigt met een winnaar bij drie op een rij, kolom of
-            diagonaal.</li>
-        <li>Het spel eindigt onbeslist als alle velden gvuld zijn zonder 3 op
-            een rij, kolom of diagonaal.</li>
+        <li>Het spel eindigt met een winnaar bij drie op een rij, kolom of diagonaal.</li>
+        <li>Het spel eindigt onbeslist als alle velden gvuld zijn zonder 3 op een rij, kolom of diagonaal.</li>
     </ol>
 </div>
 <div>
     <h1 id="analyse">Analyse</h1>
     <ol type="1">
-        <li>Er zijn minimaal 5 zetten nodig om een mogelijke winnaar te
-            bepalen</li>
+        <li>Er zijn minimaal 5 zetten nodig om een mogelijke winnaar te bepalen</li>
         <li>Na 9 zetten is het spel altijd geeindigd.</li>
-        <li>Of eerst een 0 of een X wordt gezet is niet relevant voor het
-            spel.</li>
-        <li>De volgorde waarin rij, kolom of diagonaal gevuld wordt, is niet
-            relevant voor het bepalen van de winnaar.</li>
+        <li>Of eerst een 0 of een X wordt gezet is niet relevant voor het spel.</li>
+        <li>De volgorde waarin rij, kolom of diagonaal gevuld wordt, is niet relevant voor het bepalen van de winnaar.</li>
     </ol>
 </div>
 <div>    
@@ -71,12 +62,9 @@
         <li>Het maakt niet uit wie begint.</li>
         <li>Bij het niet volgen van een regel stopt spel met exceptie.</li>
         <li>Na .Trueelke zet wordt bepaald of er een winnaar is.</li>
-        <li>Om een winnaar te bepalen kijken we alleen naar kolom, rij of
-        diagonaal bij laatst gespeelde zet</li>
-        <li>Winnende rij heeft altijd waarde <code>0</code> of
-        <code>3</code></li>
+        <li>Om een winnaar te bepalen kijken we alleen naar kolom, rij of diagonaal bij laatst gespeelde zet</li>
+        <li>Winnende rij heeft altijd waarde <b>0</b> of <b>3</b></li>
         <li>Na elke zet bepalen we of we een winnar kunnen aanwijzen</li>
-        <li>Een winnaar wordt aangewezen door te valideren of en een reeks van 3
-        X of 0 is.</li>
+        <li>Een winnaar wordt aangewezen door te valideren of en een reeks van 3 X of 0 is.</li>
     </ol>
 </div>
